# numerical_methods_project

./: .gitignore  LICENSE  PROJECT_DESCRIPTION.md  README.md  pyproject.toml
.github/workflows/: publish.yml
notebooks/: demo.ipynb
spy_asian_pricer/: __init__.py  arbitrage.py  data.py  dupire.py  mc.py  ssvi.py  surface.py  svi.py
tests/: test_smoke.py
