[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spy-asian-pricer"
version = "0.1.5"
description = "Arithmetic-average Asian option pricing on SPY under Dupire local volatility, calibrated from an SVI/JWSVI implied vol surface."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "lishi chen", email = "lc4017@columbia.edu" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]
keywords = [
    "finance",
    "asian-option",
    "monte-carlo",
    "svi",
    "jwsvi",
    "dupire",
    "local-volatility",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.optional-dependencies]
data = ["pandas>=2.0", "yfinance>=0.2"]
plot = ["matplotlib>=3.7"]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/linhzhang217/numerical_methods_project"
Repository = "https://github.com/linhzhang217/numerical_methods_project"
Issues = "https://github.com/linhzhang217/numerical_methods_project/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["spy_asian_pricer*"]
